--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,9 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <title>App</title>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready( function () {
+        $('#commitsTable').DataTable();
+      });
+    </script>
   </head>
   <body>
-    <table cellspacing="">
+    <h2>Commits from repo: {{user}}/{{repo}}</h2>
+    <table id="commitsTable">
       <thead>
         <th>Branch</th>
         <th>Date</th>
@@ -24,3 +33,4 @@
     </table>
   </body>
 </html>
+<script ></script>
