--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>App</title>
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
+    <title>Fulltimeforce Task</title>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.jqueryui.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript">
@@ -14,7 +15,7 @@
   </head>
   <body>
     <h2>Commits from repo: {{user}}/{{repo}}</h2>
-    <table id="commitsTable">
+    <table id="commitsTable" class="display" style="width:100%">
       <thead>
         <th>Branch</th>
         <th>Date</th>
